--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/Wiznet/ioLibrary_Driver.git
 [submodule "libraries/mbedtls"]
 	path = libraries/mbedtls
-	url = https://github.com/ARMmbed/mbedtls.git
+	url = https://github.com/Mbed-TLS/mbedtls.git
 [submodule "libraries/pico-sdk"]
 	path = libraries/pico-sdk
 	url = https://github.com/raspberrypi/pico-sdk.git
