add iperf2 & iperf3 lwip

--- a/port/CMakeLists.txt
+++ b/port/CMakeLists.txt
@@ -84,3 +84,23 @@ hardware_spi
 hardware_dma
 hardware_pio
 )
+
+# lwip
+add_library(LWIP_FILES STATIC)
+
+target_sources(LWIP_FILES PUBLIC
+        ${PORT_DIR}/lwip/w5x00_lwip.c
+        )
+
+target_include_directories(LWIP_FILES PUBLIC
+        ${WIZNET_DIR}/Ethernet
+        ${PORT_DIR}
+        ${PORT_DIR}/lwip
+        )
+
+target_link_libraries(LWIP_FILES PUBLIC
+        ETHERNET_FILES
+        pico_stdlib
+        pico_lwip
+        pico_lwip_nosys
+        )
